# ocr-py

./: .gitignore  Makefile  README.md  pyproject.toml
src/: extractor.py  image_processing.py  main.py  ocr.py
