[tool.poetry]
name = "ocr-py"
version = "0.1.0"
description = ""
authors = ["HirokiYasui <hiromaily2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
