[tool.poetry]
name = "ocr-py"
version = "0.1.0"
description = ""
authors = ["HirokiYasui <hiromaily2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
flake8-pyproject = "^1.2.3"

[tool.flake8]
ignore = "E501"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
